--- a/blog/_posts/2012-07-26-java-aio.md
+++ b/blog/_posts/2012-07-26-java-aio.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Java Async IO"
-tags: [java, nio, concurrent, async, ]
+tags: [java, nio, concurrent, async]
 ---
 
 Java Async IO
