add blog 由《暗时间》所引起的读书计划

--- a/blog/_posts/2013-01-14-mindmap.md
+++ b/blog/_posts/2013-01-14-mindmap.md
@@ -48,4 +48,6 @@ solid black" src="http://app.wisemapping.com/c/maps/93627/embed?zoom=1"> </ifram
 关于如何用mindmap帮助我们写作， 我在前面有简单提到，就是如同我们中学作文写提纲一样。当你把提纲列出来之后， 你就会发现写作本身是件很轻松的事情了。 看， 我写这片介绍， 就是先用mindmap列出提纲。 在写的过程中基本没有本block在某个地方写不下去。 如果你有写作的欲望， 但是发现经常写着写着写不下去， 或者写跑题了， 就尝试使用mind map 列出你想写的。建议尽量列到细节，比如论证一个论点， 需要的论据1，2，3，说明某个现象，需要用到的例子，1，2，3等 都列出来。 写的时候就会非常顺畅了。 
 
 
+> 接下去如果有时间的话， 希望我能在博客里回顾一下GRE阅读分析的方法和技巧。 其实，在专业的论文阅读中，模式基本上是固定的，对于每种类型的文章， 大体的手法就那么几种， 通过练习，如果你能掌握这几种常见的模式， 读起书来就简单多了。相当于在你的脑子里很快形成一张关于文章或者书的Mind Map. 
 
+[未完待续]
