--- a/_posts/2013-11-18-cm-build.md
+++ b/_posts/2013-11-18-cm-build.md
@@ -5,6 +5,19 @@ published: true
 tags: [android]
 ---
 
+# Android Variants /ROMs
+AOSP
+CyanogenMod
+Kandroid
+MIUI
+Stock HTC Sense
+Stock Samsung TouchWiz
+Stock LG Optimus UI
+Stock Sony UI
+
+
+
+
 1. Enviroment setup
 
 * Ubuntu 64 bit
