update blog cm build and reading list

--- a/_posts/2013-11-18-cm-build.md
+++ b/_posts/2013-11-18-cm-build.md
@@ -16,6 +16,45 @@ Stock LG Optimus UI
 Stock Sony UI
 
 
+Derivatives	
+Aliyun OS AOKP Baidu Yi CyanogenMod LeWa OS MIUI OPhone Replicant XobotOS
+
+
+
+
+# Building components
+
+1. Hardware driver (proprietary): Using ./extract-files to extract vendor drivers from real device.
+```sh
+:/media/android/cm/system/device/lge/mako$ ll extract-files.sh 
+-rwxrwxr-x 1 lucas lucas 354 Nov 18 23:19 extract-files.sh*
+```
+this pulls data from device's `/system` directory to `/vendor/lge/mako/proprietary` directory.
+
+```
+lucas@lucas-ubuntu:/media/android/cm/system/vendor/lge/mako/proprietary$ ll
+total 24
+drwxr-xr-x 6 lucas lucas 4096 Nov 19 11:29 ./
+drwxr-xr-x 3 lucas lucas 4096 Nov 19 10:17 ../
+drwxr-xr-x 2 lucas lucas 4096 Nov 19 11:29 bin/
+drwxr-xr-x 3 lucas lucas 4096 Nov 19 11:29 etc/
+drwxr-xr-x 5 lucas lucas 4096 Nov 19 11:29 lib/
+drwxr-xr-x 4 lucas lucas 4096 Nov 19 11:29 vendor/
+```
+
+These includes drivers for CPU, 
+NFC fromBroadcom
+Camera, Sensors, Audio, DRM, Cryptography from LG, and Graphics, GSM, Camera, GPS, Wi-Fi, Bluetooth, Sensors, Media, DRM, DSP, USB from Qualcomm. All these drivers are proprietary. 
+
+
+
+
+2. Kernel
+The next thing is to build the kernel source 
+use breakfast mako to download kernel source code from github
+
+
+3. Android
 
 
 1. Enviroment setup
@@ -192,4 +231,49 @@ drwxrwxr-x 15 lucas lucas      4096 Nov 19 21:01 system
 ```
 
 
+
+## Flashing
+```sh
+fastboot -w flashall
+
+
+
+
+## Kernel
+1. Building kernel from source 
+https://android.googlesource.com/device/lge/mako/
+
+2. Or, using prebuilt kernel image
+https://android.googlesource.com/device/lge/mako-kernel/
+
+## Device
+
+## Proprietary Drivers
+Binaries for Nexus Devices
+
+https://developers.google.com/android/nexus/drivers
+
+extract-files.sh
+
+extract-broadcom-mako.sh
+
+
+
+## Restoring to factory state
+
+
+### upgrade to Android 4.4 on Nexus 4
+https://developers.google.com/android/nexus/images?hl=fr-FR#occamkrt16s
+
+Note: codename for factory image of Nexus 4 is occam
+
+
+
+Android product naming rules
+
+
+
+### Questions
+
+http://source.android.com/source/known-issues.html
 
