update reading list and cm build

--- a/_posts/2013-11-18-cm-build.md
+++ b/_posts/2013-11-18-cm-build.md
@@ -5,33 +5,46 @@ published: true
 tags: [android]
 ---
 
-# Android Variants /ROMs
-AOSP
-CyanogenMod
-Kandroid
-MIUI
-Stock HTC Sense
-Stock Samsung TouchWiz
-Stock LG Optimus UI
-Stock Sony UI
+## Android Derivative ROMs
+
+* AOSP
+* **CyanogenMod**
+* Kandroid
+* MIUI
+* Aliyun OS
+* AOKP 
+* Baidu Yi
+* LeWa OS
+* OPhone
+* Replicant
+* XobotOS
+* Stock
+	* HTC Sense
+	* Samsung TouchWiz
+	* LG Optimus UI
+	* Sony UI
+
+For more, check [Wikipedia](http://en.wikipedia.org/wiki/Android ).
+
+An excellent video tutorial on Youtube
+
+<iframe width="560" height="315" src="//www.youtube-nocookie.com/embed/1_H4AlQaNa0?rel=0" frameborder="0" allowfullscreen></iframe>
 
 
-Derivatives	
-Aliyun OS AOKP Baidu Yi CyanogenMod LeWa OS MIUI OPhone Replicant XobotOS
+## Components
 
+### Hardware driver (proprietary)
 
+ Using ./extract-files to extract vendor drivers from real device.
 
-
-# Building components
-
-1. Hardware driver (proprietary): Using ./extract-files to extract vendor drivers from real device.
 ```sh
-:/media/android/cm/system/device/lge/mako$ ll extract-files.sh 
+/media/android/cm/system/device/lge/mako$ ll extract-files.sh 
 -rwxrwxr-x 1 lucas lucas 354 Nov 18 23:19 extract-files.sh*
 ```
-this pulls data from device's `/system` directory to `/vendor/lge/mako/proprietary` directory.
 
-```
+This pulls data from device's `/system` directory to `/vendor/lge/mako/proprietary` directory.'
+
+```sh
 lucas@lucas-ubuntu:/media/android/cm/system/vendor/lge/mako/proprietary$ ll
 total 24
 drwxr-xr-x 6 lucas lucas 4096 Nov 19 11:29 ./
@@ -42,50 +55,108 @@ drwxr-xr-x 5 lucas lucas 4096 Nov 19 11:29 lib/
 drwxr-xr-x 4 lucas lucas 4096 Nov 19 11:29 vendor/
 ```
 
-These includes drivers for CPU, 
-NFC fromBroadcom
-Camera, Sensors, Audio, DRM, Cryptography from LG, and Graphics, GSM, Camera, GPS, Wi-Fi, Bluetooth, Sensors, Media, DRM, DSP, USB from Qualcomm. All these drivers are proprietary. 
+These includes drivers for CPU, NFC fromBroadcom, Camera, Sensors, Audio, DRM, Cryptography from LG, and Graphics, GSM, Camera, GPS, Wi-Fi, Bluetooth, Sensors, Media, DRM, DSP, USB from Qualcomm. All these drivers are proprietary. 
 
 
 
+### Kernel
 
-2. Kernel
 The next thing is to build the kernel source 
-use breakfast mako to download kernel source code from github
+use breakfast `mako` (code name for Nexus 4) to download kernel source code from github
 
+### Android
 
-3. Android
+## Building 
 
-
-1. Enviroment setup
+### Enviroment setup
 
 * Ubuntu 64 bit
 * Android SDK 
 * JDK
 * Python
 
-2. Download source 
+### Download source 
 
 * repo 
 * mkdir, `/media/android/cm/system/`
 
 
-3. build 
+
+#### CM source file structure
+
+link: http://wiki.cyanogenmod.org/w/Doc:_the_cm_source
+
+* bionic
+* build 
+* bootable: cwm recovery 
+* dalvik
+* art, replacement of dalvik, android runtime
+* device, board support packages and configurations for a particular device. device/<vendor>/<codename>, /device/]
+asus/grouper, device/lge/mako, where to put customized stuff for each device. `breakfast grouper && repo sync`
+* docs: android open source website
+* external, non-android utilities, with Android.mk to work with android build system
+* frameworks, Android core
+* hardware, platform/hardware specific libs
+* kernel, /kernel/<vendor>/<codename>
+* ndk
+* out, make clobber
+* packages, Android standalone apps, like Settings, Browser, Launcher, etc
+* prebuilt(s)
+* system: linux shell, etc. 
+* vendor: cm, lge, htc, etc
+
+For Nexus 4:
+
+* vendor:cm 
+* hardware: ti
+* kernel: google/msm
+* device: lge/mako 
 
 
 
-4. build
+
+
+Repo manifest format
+
+top level `./.repo/default.xml` XML file. 
+
+* manifest: the root element of the file. 
+* remote: git url shared by one or more projects and the gerrit review server those projects upload changes through. 
+* name: short git remote name
+* alias: override name if specified in each project''s .git/config
+* fetch: git url prefix for all projects which use this remote
+* review: gerrit review server used by repo update
+* default: used when a project does not specify remtoe and revision. 
+* manifest-server
+* project: single git repo. 
+* annotation
+* remove-project
+* include
+
+
+Local Manifests
+
+```
+.repo/local_manifests/*.xml
+
+
+/device/lge/mako/extract-files.sh
+adb pull /system/* to /vendor/lge/mako/proprietary
+
+
+
+The problems encountered during downloading the cm source
+
+Since the source repo is huge, the downloading process can be intermittant
+
+
+
+
+3. build
 
 breakfast
 brunch
 lunch
-
-
-
-5. 
-
-
-
 
 
 build files
@@ -111,93 +182,19 @@ $OUT= /out/target/project/CODENAME
 * /recovery/root, ramdisk contains the recovery mode 
 
 
-
+```sh
 mm: make modules, mm -B 
 adb sync system
 
-
 adb remount= adb shell mount -o rw,remount /system
+```
 
 
-
-
-
-## CM source file structure
-link: http://wiki.cyanogenmod.org/w/Doc:_the_cm_source
-
-* bionic
-* build 
-* bootable: cwm recovery 
-* dalvik
-* art, replacement of dalvik, android runtime
-* device, board support packages and configurations for a particular device. device/<vendor>/<codename>, /device/asus/grouper, device/lge/mako, where to put customized stuff for each device. `breakfast grouper && repo sync`
-* docs: android open source website
-* external, non-android utilities, with Android.mk to work with android build system
-* frameworks, Android core
-* hardware, platform/hardware specific libs
-* kernel, /kernel/<vendor>/<codename>
-* ndk
-* out, make clobber
-* packages, Android standalone apps, like Settings, Browser, Launcher, etc
-* prebuilt(s)
-* system: linux shell, etc. 
-* vendor: cm, lge, htc, etc
-
-
-vendor:cm 
-hardware: ti
-kernel: nexus 4
-device: lge/mako 
-
-
-
-* 
-
-
-
-
-
-
-
-
-
-
-Repo manifest format
-
-top level `default.xml` XML file. 
-
-* manifest: the root element of the file. 
-* remote: git url shared by one or more projects and the gerrit review server those projects upload changes through. 
-* name: short git remote name
-* alias: override name if specified in each project's .git/config
-* fetch: git url prefix for all projects which use this remote
-* review: gerrit review server used by repo update
-* default: used when a project does not specify remtoe and revision. 
-* manifest-server
-* project: single git repo. 
-* annotation
-* remove-project
-* include
-
-
-Local Manifests
-
-.repo/local_manifests/*.xml
-
-
-/device/lge/mako/extract-files.sh
-adb pull /system/* to /vendor/lge/mako/proprietary
-
-
-
-The problems encountered during downloading the cm source
-
-Since the source repo is huge, the downloading process can be intermittant
 
 
 ## Build Success
 
-```log
+```
 /media/android/cm/system/out/target/product/mako
 ➜  mako  ls -la
 total 803408
@@ -236,14 +233,14 @@ drwxrwxr-x 15 lucas lucas      4096 Nov 19 21:01 system
 2. Flash 
 
 
-## Flashing
 ```sh
 fastboot -w flashall
 
+```
 
 
+## Building Kernel
 
-## Kernel
 1. Building kernel from source 
 https://android.googlesource.com/device/lge/mako/
 
@@ -252,7 +249,7 @@ https://android.googlesource.com/device/lge/mako-kernel/
 
 ## Device
 
-## Proprietary Drivers
+### Proprietary Drivers
 Binaries for Nexus Devices
 
 https://developers.google.com/android/nexus/drivers
@@ -280,4 +277,8 @@ Android product naming rules
 ### Questions
 
 http://source.android.com/source/known-issues.html
+
+# References
+1. http://source.android.com/devices/index.html
+2. Youtube //www.youtube-nocookie.com/embed/1_H4AlQaNa0?rel=0
 
