--- a/_posts/2013-01-14-mindmap.md
+++ b/_posts/2013-01-14-mindmap.md
@@ -37,7 +37,7 @@ solid black" src="http://app.wisemapping.com/c/maps/93627/embed?zoom=1"> </ifram
 
 想起那句谚语，
 
- 如果你手里有一把锤子， 所有东西看上去都像是钉子。 
+> 如果你手里有一把锤子， 所有东西看上去都像是钉子。 
 
 其实更应该是反过来， 
 
