add python intro

--- a/_posts/2014-04-15-django.md
+++ b/_posts/2014-04-15-django.md
@@ -101,3 +101,19 @@ URL pattern, urlconfs: map url patterns to views.
 ### Writing your first Django app, part 6, static files
 1. Customize your app’s look and feel
 1. Adding a background-image
+
+
+
+
+## April 22, 2014
+### Advanced tutorial: How to write reusable apps
+1. package django apps to a tar file
+1. virtualenv
+1. python package index PyPI
+
+
+
+
+
+## Q
+1. Run server by `python manage.py runserver`. How to start it as background service?
