add blog for django

--- a/_posts/2014-04-15-django.md
+++ b/_posts/2014-04-15-django.md
@@ -112,7 +112,33 @@ URL pattern, urlconfs: map url patterns to views.
 1. python package index PyPI
 
 
+## May 14, 2014
+### i18n, l10n
+### Logging
 
+
+
+
+## May 15, 2014
+### Python 包管理
+
+大部分现代语言都需要有包管理的机制， 使得开发的组件可以重用。
+
+Java使用jar 打包组件， 使用maven来管理组件和组件之间的依赖。
+
+Python 使用`pip`来安装和管理本地的组件。
+其他工具有`easy_install`, `distribute`
+
+`pip` 从`PyPI` （Python Package Index） 线上网站查找需要的包，如同maven 从mvncentral 查找jar包。
+
+Python 使用`Eggs`, 如同Java 使用`jar`
+
+
+### WSGI
+Web Server Gateway interface
+
+### Werkzeug
+Werkzeug is a WSGI utility for Python
 
 
 ## Q
