--- a/_posts/2014-05-14-python.md
+++ b/_posts/2014-05-14-python.md
@@ -41,6 +41,8 @@ Django 是基于Python 语言开发 的流行的Web 框架。 没办法，得学
 
 
 
+
+
 下面的MindMap 就总结了Python语言的这些方面:
 <iframe style="width:700px;height:400px;border: 1px
 solid black" src="https://app.wisemapping.com/c/maps/204519/embed?zoom=1"> </iframe>
@@ -51,3 +53,60 @@ solid black" src="https://app.wisemapping.com/c/maps/204519/embed?zoom=1"> </ifr
 * Exception处理
 * 类库
 * 生态
+
+## Python 类库
+Python for the web. python 是为web 而设计， 使用python 很大程度上为了于web 交互。 从而不可避免的要有一些web 相关的 库。
+
+### json
+json 由于AJAX的兴起，大受欢迎， 以至于今天多数的web API 都以JSON 格式提供。 使用python 操作json 也成了日常工作中必不可少的技能。
+Django 1.7 内置了新的json 类库， 但是1.7之前， 还是需要使用[python 的json 类库](https://docs.python.org/2/library/json.html).
+
+如果熟悉json 格式的话，学习这个类库会很简单。 Python内部使用dictionary来存储json 数据, 没有class JSONObject 这样的类。
+
+```python
+In [10]: type(x)
+Out[10]: dict
+
+In [11]: x={'__complex__':True, 'real':1, 'imag':2}
+
+In [12]: type(x)
+Out[12]: dict
+
+In [13]: json.dumps(x)
+Out[13]: '{"real": 1, "imag": 2, "__complex__": true}'
+
+In [14]: str = json.dumps(x)
+
+In [15]: type(str)
+Out[15]: str
+
+In [16]: j = json.loads(str)
+
+In [17]: type(j)
+Out[17]: dict
+
+In [18]: j
+Out[18]: {u'__complex__': True, u'imag': 2, u'real': 1}
+```
+
+json 类库主要有四个函数:
+
+
+* json.dumps() 将python 的dictionary dump 成字符串输出
+* json.loads() 将字符串转化成 dictionary
+* json.JSONEncoder.encode()
+* json.JSONDecoder.decode()
+
+
+Pretty print json
+
+```sh
+curl https://github.com/timeline.json |python -mjson.tool
+```
+
+
+Parse HTML: LXML
+
+
+Django 使用`django.utils.simplejson`  类库
+### requests
