update django post

--- a/_posts/2014-04-15-django.md
+++ b/_posts/2014-04-15-django.md
@@ -16,7 +16,7 @@ tags: [python, django]
       ```
       django-admin.py startproject mysite
       ```
-      
+
       * project structure
 
             ➜  python  tree mysite
@@ -81,7 +81,7 @@ URL pattern, urlconfs: map url patterns to views.
   * Template System
     * loader
     * render
-    * removing hardcoded urls in template by using {%%}
+    * removing hardcoded urls in template by using  {% raw  %}`{% %}` {% endraw  %}
 1. Namespacing URL names
 
 
