--- a/_posts/2017-09-06-vuejs.md
+++ b/_posts/2017-09-06-vuejs.md
@@ -128,9 +128,9 @@ So for a global function, this refers to 'window' in browser
     * block: let/ const
 
 
-[Understanding Scope and Context in JavaScript](http://ryanmorr.com/understanding-scope-and-context-in-javascript/)
+  [Understanding Scope and Context in JavaScript](http://ryanmorr.com/understanding-scope-and-context-in-javascript/)
 
 * Execution Context
 
 * Execution stack
-The answer is short and simple: Scope pertains to the visibility of variables, and context refers to the object within which a function is executed.
+  > The answer is short and simple: Scope pertains to the visibility of variables, and context refers to the object within which a function is executed.
