--- a/_posts/2018-07-03-node-js.md
+++ b/_posts/2018-07-03-node-js.md
@@ -18,12 +18,15 @@ tags: [node]
     - [Hello world](#hello-world)
     - [HTML 渲染](#html-%E6%B8%B2%E6%9F%93)
     - [Component](#component)
+        - [Organizing components](#organizing-components)
+        - [SFC](#sfc)
     - [Vue class / instance](#vue-class--instance)
         - [Options/*](#options)
     - [API](#api)
         - [global config](#global-config)
         - [Global API](#global-api)
         - [Options/data](#optionsdata)
+        - [events](#events)
     - [Questions](#questions)
     - [javascript context/ scope/ this](#javascript-context-scope-this)
     - [Vue-cli](#vue-cli)
@@ -32,6 +35,10 @@ tags: [node]
     - [MISCS](#miscs)
     - [vue-loader](#%08vue-loader)
     - [AMD v.s. CommonJS v.s. UMD](#amd-vs-commonjs-vs-umd)
+    - [MISC](#misc)
+    - [](#)
+            - [vuex](#vuex)
+    - [MISC](#misc)
 
 <!-- /TOC -->
 
@@ -345,6 +352,41 @@ Vue.component('todo-item', {
 })
 ```
 
+Instead, a component’s data option must be a function, so that each instance can maintain an independent copy of the returned data object:
+```js
+data: function () {
+  return {
+    count: 0
+  }
+}
+```
+
+### Organizing components
+
+* registration:
+    * global
+        * `Vue.component('name', opts)`
+        * Globally registered components can be used in the template of any root Vue instance (new Vue) created afterwards – and even inside all subcomponents of that Vue instance’s component tree.
+
+
+    * local
+
+* Props
+    * props is like interface to class, and data is used to maitain interal state, as private fields to class. 
+* 
+### SFC
+
+```js
+Vue.
+```
+
+* Passing Data to Child Components with Props
+* Sending Messages to Parents with Events
+* v-model
+* Content Distribution with Slots
+* Dynamic Components
+    `<component v-bind:is="currentTabComponent"></component>`
+
 ## Vue class / instance
 
 ```js
@@ -396,8 +438,14 @@ var vm = new Vue({
 * propsData: initial / default data for props
 * computed:
 
+### events
 
+* `$emit`
 
+synthetic events
+[Creating and triggering events](https://developer.mozilla.org/en-US/docs/Web/Guide/Events/Creating_and_triggering_events)
+
+`vm.$emit( eventName, […args] )`
 
 ## Questions
 1. what is javascript prototype?
@@ -566,3 +614,57 @@ Asynchronous Module Definition
         return myFunc;
     }));
     ```
+
+
+
+## MISC
+
+* js `===` v.s. `==` 
+
+
+##
+#### vuex
+![vuex](https://vuex.vuejs.org/vuex.png)
+
+vuex 集中管理应用中的状态。 类似 Java Spring 中的配置中心。 
+一种管理的哲学思想 
+commit 的方式相当于 会隐藏了 setOnListener 的调用, 类似 set 方法， 而不是直接访问状态字段
+
+* state
+* mutations
+* 触发变化 `store.commit('increment')`
+* 调用状态: 计算属性
+  ```js
+   computed: {
+    count () {
+      return store.state.count
+    }
+  }
+  ```
+* 单一状态树， 唯一数据源 SSOT, 状态快照
+
+So actions/mutations allow you to:
+
+* centrally define allowed changes to the state, and by that,
+* how those changes are connected and logically depend on one another (i.e. by reading an action that commits a series of mutations)
+* track these changes in the devtools very easily, as you see all the Mutation names you just read in the list there.
+* writing expressive code that, to an extend, documents your business logic. You can understand a lot about an app’s business logic by just reading its store actions & mutations, without digging through hundreds of components looking where some piece of state is altered under which circumstances.
+
+
+* mapGetter 类同 Java Bean 中的自动生成 get 函数
+* 
+* mapMutations 类同 Java Bean 中自动生成 set 函数
+* 可以手写 get / set 函数， 以定制化
+    * get: getters:
+    * set: mutations: 
+    * mutaions  = event + event handler (type + handler)
+    * computed: mapState
+
+* Actions
+    * ...mapActions
+
+
+## MISC
+* `setInterval`
+* `clearInterval`
+* `setTimeout` `clearTimeout`
