--- a/_posts/2019-09-12-vue-cli.md
+++ b/_posts/2019-09-12-vue-cli.md
@@ -160,5 +160,22 @@ tags: [vue, web]
 1. what is vue-loader, babel-loader, lint-loader etc. ?
 2. Javascript moduel, moduleA.js? moduleB/index.js? 
     > See [Learn the basics of the JavaScript module system and build your own library](https://medium.freecodecamp.org/anatomy-of-js-module-systems-and-building-libraries-fadcd8dbd0e)
-    
+
     > Telling stories is as basic to human beings as eating. More so, in fact, for while food makes us live, stories are what make our lives worth living - Richard Kearney
+
+    * tools
+        * CommonJS
+        * AMD
+        * UMD
+        * ES6 (Harmony)
+    * Best Practices
+        * Tree shaking: `import` , `export`
+        * Webpack vs Rollup vs Babel?
+        * webpack: 
+            * code splitting, 
+            * async loading of bundles, 
+            * tree shaking,
+        * UI Libraries have a dist folder that has the bundled and minified version for ES and UMD/CJS module systems as a target. There is a lib folder that has the transpiled version of the library. 
+        * Core Packages have just one folder which has the bundled and minified version for CJS or UMD module system as a target.
+
+
