rename graphics -> imgs

--- a/_posts/2013-11-18-cm-build.md
+++ b/_posts/2013-11-18-cm-build.md
@@ -55,7 +55,7 @@ drwxr-xr-x 5 lucas lucas 4096 Nov 19 11:29 lib/
 drwxr-xr-x 4 lucas lucas 4096 Nov 19 11:29 vendor/
 ```
 
-These includes drivers for CPU, NFC fromBroadcom, Camera, Sensors, Audio, DRM, Cryptography from LG, and Graphics, GSM, Camera, GPS, Wi-Fi, Bluetooth, Sensors, Media, DRM, DSP, USB from Qualcomm. All these drivers are proprietary. 
+These includes drivers for CPU, NFC fromBroadcom, Camera, Sensors, Audio, DRM, Cryptography from LG, and imgs, GSM, Camera, GPS, Wi-Fi, Bluetooth, Sensors, Media, DRM, DSP, USB from Qualcomm. All these drivers are proprietary. 
 
 
 
