--- a/_posts/2018-07-03-node-js.md
+++ b/_posts/2018-07-03-node-js.md
@@ -500,7 +500,7 @@ new 3.x is `@vue/cli`, the old is `vue-cli`
 
 ### UI
 
-![img](../graphics/vue-cli-ui.jpg)
+![img](../imgs/vue-cli-ui.jpg)
 * UI template
 
     ```bash
