feat(blog): migrate blog from Jekyll to Next.js and Tailwind CSS

--- a/data/blog/2025/2025-02-26-blog-migration.mdx
+++ b/data/blog/2025/2025-02-26-blog-migration.mdx
@@ -4,7 +4,7 @@ date: '2025-02-26'
 summary: 'Transitioning from a Jekyll-based GitHub Pages blog to a Next.js and Tailwind CSS setup, incorporating MDX for enhanced interactivity.'
 draft: false
 tags: ['blog', 'migration']
-author: 'Lukas'
+authors: ['Lukas']
 ---
 
 For years, I've maintained my blog using GitHub Pages with Jekyll. The system worked well - write in Markdown, let GitHub handle the rendering, and voilà! But recently, I caught the itch to modernize my setup with Next.js and Tailwind CSS.
