style: improve class order and formatting across components

--- a/data/blog/2025/parent.mdx
+++ b/data/blog/2025/parent.mdx
@@ -1,36 +1,41 @@
 ---
-title: "Your Blog Post Title"
-date: "2025-01-01"
-author: "Author Name"
+title: 'Your Blog Post Title'
+date: '2025-01-01'
+author: 'Author Name'
 ---
 
-
 ## Your Blog Post Title
-<div class="mx-auto max-w-md overflow-hidden rounded-xl bg-white shadow-md md:max-w-2xl mb-5">
-  <div class="md:flex">
-    <div class="md:shrink-0">
+
+<div className="mx-auto mb-5 max-w-md overflow-hidden rounded-xl bg-white shadow-md md:max-w-2xl">
+  <div className="md:flex">
+    <div className="md:shrink-0">
       <img
-        class="h-48 w-full object-cover md:h-full md:w-48"
+        className="h-48 w-full object-cover md:h-full md:w-48"
         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9SRRmhH4X5N2e4QalcoxVbzYsD44C-sQv-w&s"
         alt="Modern building architecture"
       />
     </div>
-    <div class="p-8">
-      <div class="text-sm font-semibold tracking-wide text-indigo-500 uppercase">Company retreats</div>
-      <a href="#" class="mt-1 block text-lg leading-tight font-medium text-black hover:underline">
+    <div className="p-8">
+      <div className="text-sm font-semibold uppercase tracking-wide text-indigo-500">
+        Company retreats
+      </div>
+      <a
+        href="#"
+        className="mt-1 block text-lg font-medium leading-tight text-black hover:underline"
+      >
         Incredible accommodation for your team
       </a>
-      <p class="mt-2 text-gray-500">
-        Looking to take your team away on a retreat to enjoy awesome food and take in some sunshine? We have a list of
-        places to do just that.
-      </p>
+      <div className="mt-2 text-gray-500">
+        Looking to take your team away on a retreat to enjoy awesome food and take in some sunshine?
+        We have a list of places to do just that.
+      </div>
     </div>
   </div>
 </div>
 <HelloMDX />
 
 <table>
-  <caption class="caption-top">
+  <caption className="caption-top">
     Table 3.1: Professional wrestlers and their signature moves.
   </caption>
   <thead>
@@ -54,6 +59,3 @@ author: "Author Name"
     </tr>
   </tbody>
 </table>
-
-
-<Calendar aria-label="Date (No Selection)" />
