feat: add new blog post about Tailwind CSS and modern build tools

--- a/data/blog/2025/2025-01-02-childmdx.mdx
+++ b/data/blog/2025/2025-01-02-childmdx.mdx
@@ -7,12 +7,12 @@ draft: true
 tags: [markdown, github, gfm, mdx]
 ---
 
-{/* 
+{/_
 import {
-  default as ChildMDX,
-  frontmatter as childFrontmatter,
+default as ChildMDX,
+frontmatter as childFrontmatter,
 } from "./child.mdx";
-*/}
+_/}
 
 ## MDX Using file based routing
 
@@ -27,9 +27,9 @@ See more: [Using file based routing](https://nextjs.org/docs/app/building-your-a
 Just like you would do in a normal React component.
 
 ```tsx
-import HelloMDX from "./hello-mdx";
+import HelloMDX from './hello-mdx'
 
-<HelloMDX />;
+;<HelloMDX />
 ```
 
 <p />
@@ -42,17 +42,15 @@ We can directly import the MDX file as a React component. Next.js use [remark-md
 
 Remember to add dependency to your `package.json` and add the plugin to `remarkPlugins` in `next.config.ts`.
 
-  ```tsx
-  import {
-    default as ChildMDX,
-    frontmatter as childFrontmatter,
-  } from "./child.mdx";
-  ```
+```tsx
+import { default as ChildMDX, frontmatter as childFrontmatter } from './child.mdx'
+```
 
 #### **childFrontmatter**
 
-  This is the frontmatter metadata of the child page.
-```
+This is the frontmatter metadata of the child page.
+
+```tsx
   <pre className="relative p-6 rounded-xl overflow-hidden bg-slate-100">
     {JSON.stringify(childFrontmatter, null, 2)}
   </pre>
@@ -69,17 +67,19 @@ Remember to add dependency to your `package.json` and add the plugin to `remarkP
     </ul>
   </div>
 ```
+
 #### **Child page content**
 
-  <div className="relative p-6 rounded-xl overflow-hidden bg-slate-100">
-    <ChildMDX />
-  </div>
+> [!WARNING]
+> This is to be fixed. ContentLayer2 does not support ChildMDX file yet.
+
+```tsx
+<div className="relative overflow-hidden rounded-xl bg-slate-100 p-6">{/* <ChildMDX /> */}</div>
+```
 
 > [!NOTE]
 > The `remark-mdx-frontmatter` plugin, which is used to extract the frontmatter metadata from the MDX file, exports the metadata as `frontmatter`
-  but it may conflict with the `frontmatter` in the current page. So we rename it to `childFrontmatter` to avoid conflict.
-
-
+> but it may conflict with the `frontmatter` in the current page. So we rename it to `childFrontmatter` to avoid conflict.
 
 ### Github Flavored Blockquotes with Alert
 
